Fixed height margin of title on smaller devices

--- a/web_demo/nlp_demo/src/_title.scss
+++ b/web_demo/nlp_demo/src/_title.scss
@@ -71,7 +71,7 @@
 
 #title-div header {
     width: 100%;
-    height: 10%;
+    height: 10vh;
     background-color: white;
     position: absolute;
     left: 0%;
@@ -90,7 +90,7 @@
 #title-text-div {
     
     @include media("<smalldesktop"){
-        margin-top: 15%;
+        margin-top: 11vh;
     }
     @include media(">=smalldesktop"){
         position: absolute; 
